# is-admin

./: Cargo.toml  package.json  readme.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
ts/: cli.ts  index.ts
