[package]
name = "is-admin"
version = "0.1.3"
edition = "2024"
resolver = "2"
license = "MIT"
description = "is-admin"
repository = "https://github.com/ahaoboy/is-admin"
homepage = "https://github.com/ahaoboy/is-admin"
authors = ["ahaoboy"]

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
